# esp32-travis-ci-test

./: .travis.yml  Makefile  README.md  codecov.yml  sdkconfig  travis_build.sh  travis_unittest.sh
components/analog_sensor/: analog_sensor.c
components/analog_sensor/include/: analog_sensor.h
components/ds18b20/: ds18b20.c
components/ds18b20/include/: ds18b20.h
docker/: Dockerfile
ld/: esp32.common.ld
main/: ble.c  ble.h  cert.c  component.mk  help.c  light_sensor.c  main.c  mqtt.c  mqtt.h  ntp.c  ntp.h  wwifi.c  wwifi.h
tests/: CMakeLists.txt  analog_sensor.cpp
tests/mock/: m_adc.c  m_adc.h  m_esp_log.c
